--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "@octokit/types": "^11.1.0",
     "@types/marked": "^5.0.1",
     "@types/react-icons": "^3.0.0"
+  },
+  "vercel": {
+    "domain": "sazonarte.cl",
   }
 }
